# utils

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/brain_tree/: test.cpp
example/directory/: test.cpp
example/enum/: test.cpp
example/event/: test.cpp
example/gpio/: test.cpp
example/iodata/: test.cpp
example/json/: test.cpp
example/log/: test.cpp
example/memory_pool/: test.cpp
example/optional/: test.cpp
example/pubsub/: test.cpp
example/system/: test.cpp
example/test/: test.cpp
example/text/: test.cpp
example/thread/: test.cpp
example/thread_pool/: test.cpp
example/timer/: test.cpp
platform/: PC.cmake  R16.cmake  sample.cmake
src/: CMakeLists.txt
src/asio/asio/: co_spawn.hpp  io_context.hpp  multiple_exceptions.hpp  prefer.hpp  query.hpp  require.hpp  require_concept.hpp  strand.hpp  system_context.hpp  thread.hpp  thread_pool.hpp
src/asio/asio/detail/: array_fwd.hpp  atomic_count.hpp  call_stack.hpp  concurrency_hint.hpp  config.hpp  local_free_on_block_exit.hpp  null_signal_blocker.hpp  null_thread.hpp  posix_signal_blocker.hpp  posix_thread.hpp  posix_tss_ptr.hpp  resolver_service.hpp  resolver_service_base.hpp  scheduler.hpp  select_reactor.hpp  std_thread.hpp  strand_executor_service.hpp  strand_service.hpp  thread.hpp  thread_context.hpp  thread_group.hpp  win_iocp_handle_service.hpp  win_iocp_io_context.hpp  win_iocp_socket_service_base.hpp  win_thread.hpp  win_tss_ptr.hpp  winapp_thread.hpp  wince_thread.hpp  winrt_timer_scheduler.hpp
src/asio/asio/detail/impl/: dev_poll_reactor.ipp  epoll_reactor.ipp  kqueue_reactor.ipp  scheduler.ipp  select_reactor.ipp  signal_set_service.ipp  strand_executor_service.ipp  strand_service.ipp  win_iocp_handle_service.ipp  win_iocp_io_context.ipp  win_iocp_socket_service_base.ipp  win_thread.ipp
src/asio/asio/execution/: bulk_execute.hpp  connect.hpp  execute.hpp  schedule.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
src/asio/asio/impl/: awaitable.hpp  io_context.hpp  thread_pool.hpp  thread_pool.ipp  use_awaitable.hpp
src/asio/asio/posix/: basic_stream_descriptor.hpp
src/asio/asio/ssl/detail/: engine.hpp
src/directory/: directory.cpp  directory.h  directory_scanner.cpp  directory_scanner.h  directory_scanner_unix.cpp  directory_scanner_unix.h  directory_scanner_win32.h  path.cpp  path.h
src/directory/dir/: directory.cpp  directory_scanner.cpp  directory_scanner_impl.h  directory_scanner_unix.cpp  directory_scanner_win32.cpp
src/easySqlite3/sqlite3/: sqlite3.h
src/event/: event.cpp  event.h  event_dispatcher.h  value.cpp  value.h
src/exception/: exception.cpp  exception.h  stack_trace.cpp
src/gpio/: gpio.cpp  gpio.h
src/gzip/: CMakeLists.txt  crc32.c  deflate.c  gzip.h  inflate.c  inftrees.c  trees.c  zlib.h
src/http/: CMakeLists.txt  httplib.cpp  httplib.h
src/iodata/: databuffer.cpp  databuffer.h  file.h  iodevice.h  iodevice_provider.h  memory_device.h  string_help.cpp
src/iodata/src/: databuffer.cpp  file.cpp  iodevice.cpp  iodevice_provider_file.cpp  iodevice_provider_file.h  iodevice_provider_memory.cpp  iodevice_provider_memory.h  memory_device.cpp
src/json/: json.h
src/md5/: CMakeLists.txt  md5.cpp  md5.h
src/mqtt/c/: CMakeLists.txt  Heap.c  Log.c  MQTTAsyncUtils.c  MQTTClient.c  MQTTProperties.c  MQTTProtocolClient.c  MQTTProtocolClient.h  StackTrace.c  Thread.c
src/mqtt/cpp/: CMakeLists.txt
src/mqtt/cpp/mqtt/: client.h
src/optional/: optional.h
src/pubsub/: pubsub.h
src/share/: bind_member.h  exception.cpp  exception.h  stack_trace.cpp  stack_trace.h
src/signals/: signals.h
src/spdlog/: README.md
src/spdlog/inc/: spdlog_impl.h
src/spdlog/inc/spdlog/: async.h  async_logger-inl.h  common.h  spdlog.h  stopwatch.h  tweakme.h
src/spdlog/inc/spdlog/details/: os-inl.h  periodic_worker-inl.h  registry.h  thread_pool-inl.h
src/spdlog/inc/spdlog/fmt/: chrono.h  fmt.h  ostr.h
src/spdlog/inc/spdlog/fmt/bundled/: core.h  format-inl.h  format.h
src/spdlog/inc/spdlog/sinks/: dup_filter_sink.h
src/spdlog/include/spdlog/: async_logger.h  pattern_formatter-inl.h  tweakme.h
src/spdlog/include/spdlog/details/: os.h  periodic_worker.h  registry-inl.h  thread_pool.h
src/spdlog/include/spdlog/fmt/bundled/: os.h
src/system/: endian.h  system.cpp  system.h
src/text/: file.cpp  file.h  path.cpp  path.h  string_help.h  strings.cpp  strings.h
src/thread/: ptr_extend.h  signals.h  singleton_thread_pool.h  thread_pool.h  threads.h
src/thread_pool/: SingletonThreadPool.h  ThreadPool.h
src/timer/: datetime.cpp  datetime.h  timer.cpp  timer.h
src/yaml/include/yaml-cpp/: dll.h
src/yaml/test/: create-emitter-tests.py
src/yaml/test/gtest-1.10.0/googlemock/docs/: cook_book.md
src/yaml/test/gtest-1.10.0/googlemock/include/gmock/: gmock-generated-actions.h  gmock-matchers.h  gmock-spec-builders.h  gmock.h
src/yaml/test/gtest-1.10.0/googlemock/scripts/: fuse_gmock_files.py  gmock-config.in  gmock_doctor.py  upload.py
src/yaml/test/gtest-1.10.0/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc
src/yaml/test/gtest-1.10.0/googlemock/test/: gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock_stress_test.cc
src/yaml/test/gtest-1.10.0/googletest/: README.md
src/yaml/test/gtest-1.10.0/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h
src/yaml/test/gtest-1.10.0/googletest/samples/: sample3_unittest.cc  sample6_unittest.cc
src/yaml/test/gtest-1.10.0/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py  gtest-config.in  pump.py  upload.py
src/yaml/test/gtest-1.10.0/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
src/yaml/test/gtest-1.10.0/googletest/test/: googletest-catch-exceptions-test.py  googletest-filepath-test.cc  googletest-options-test.cc  googletest-output-test_.cc  googletest-port-test.cc  gtest-typed-test_test.cc  gtest_repeat_test.cc  gtest_stress_test.cc  gtest_unittest.cc
(+7 files in other folders)
